--- a/peluqueria/templates/pagina_quienes_somos.html
+++ b/peluqueria/templates/pagina_quienes_somos.html
@@ -33,7 +33,7 @@
                     </a>
                  </div>
                     <nav class="navegador_informacion">
-                        <a href="/">Quiénes somos</a>
+                        <a href="/Quiénes_somos"></a>
                         <a href="/Contacto">Contacto</a>
                         <a href="/">Dirección</a>
                         <a href="/Profesionales">Profesionales</a>
@@ -47,7 +47,41 @@
     </header>
 
 
+    <main>
+        <section class="Barra_contenedor seccion">
+
+            <h1 class="encabezado-servicios">¿Quienes Somos?</h1>
+                <div class="catalogo">
+                    <div class="catalogo_superior">
  
+
+                        <ul class="informacion_contacto">
+
+                            <h2>Misión</h2>
+                            <p>Proveer Servicios de Alta peluquería y Asesoramiento de Imagen, Con el fin de Brindar   
+                                a sus clientes soluciones Satisfactorias, mediante el uso de  la   diferenciación  
+                                en la prestación de sus servicios haciéndose destacar por su Precios justos, Alta Calidad 
+                                y Gran sentido de Innovación.</p>
+
+                            <h2>Visión</h2>
+                        
+                            <p>Llegar a Convertirse en una empresa Reconocida en la Prestación de Servicios 
+                                de Alta Peluquería y Asesoramiento de Imagen a nivel intercomunal logrando 
+                                a sus clientes  obtener  Beneficios Integrales por la disponibilidad de sus 
+                                empleados en  ofrecer  buenas técnicas que se destaquen por su Alta calidad.</p>
+                            
+                
+                            <hr/>
+                    
+                            <a href="/"><input type="button" value="volver" class="btn btn-info"></a>
+                        </ul>
+                     </div>
+                </div>
+        </section>
+        
+        
+
+    </main>
 
 
 
