intento de deploy

--- a/peluqueria/templates/layout.html
+++ b/peluqueria/templates/layout.html
@@ -56,7 +56,7 @@
                 {% else %}
                     {% if perms.users.view_cliente %}
                         <nav class="navegador_informacion">
-                            <a href="/Quienes_somos">Quiénes somos</a>
+                            <a href="/quienes_somos">Quiénes somos</a>
                             <a href="/Contacto">Contacto</a>
                             <a href="/reservas">Reservas</a>
                             <a href="/Profesionales">Profesionales</a>
