--- a/peluqueria/templates/pagina_lavados.html
+++ b/peluqueria/templates/pagina_lavados.html
@@ -12,7 +12,7 @@
                     <div class="catalogo_superior">
                         <div class="servicios">
                             <h3>LAVADO Y CORTE VARÓN</h3>
-                            <img src="{% static 'imagenes/imagen_prueba.jpg' %}"  alt="My image">
+                            <img src="{% static 'imagenes/lavado_hombre.jpg' %}"  alt="My image">
                                 <div class="infor_servicio">
                                     <li>Duración: 60 Minutos</li>
                                     <li>Precio: $13.000</li>
@@ -23,7 +23,7 @@
                         </div>
                         <div class="servicios">
                             <h3>LAVADO Y CORTE MUJER</h3>
-                            <img src="{% static 'imagenes/imagen_prueba.jpg' %}" alt="My image">
+                            <img src="{% static 'imagenes/lavado_mujer.jpg' %}" alt="My image">
                             <div class="infor_servicio">
                                 <li>Duración: 60 Minutos</li>
                                 <li>Precio: $13.000</li>
