--- a/peluqueria/templates/layout.html
+++ b/peluqueria/templates/layout.html
@@ -56,7 +56,7 @@
                 {% else %}
                     {% if perms.users.view_cliente %}
                         <nav class="navegador_informacion">
-                            <a href="/Quienes_somos">Quiénes somos</a>
+                            <a href="/quienes_somos">Quiénes somos</a>
                             <a href="/Contacto">Contacto</a>
                             <a href="/reservas">Reservas</a>
                             <a href="/Profesionales">Profesionales</a>
@@ -65,9 +65,9 @@
                         {% if perms.users.view_peluquero %}
                             <nav class="navegador_informacion">
                                 <a href="/quienes_somos">Quiénes somos</a>
-                                <a href="/Contacto">Próximas reservas</a>
-                                <a href="/">Contacto</a>
-                                <a href="/Profesionales">Servicios realizados</a>
+                                <a href="/">Próximas reservas</a>
+                                <a href="/contacto">Contacto</a>
+                                <a href="/Profesionales">Profesionales</a>
                             </nav> 
                         {% else %} 
                             <nav class="navegador_informacion">
