--- a/peluqueria/templates/pagina_tintes.html
+++ b/peluqueria/templates/pagina_tintes.html
@@ -12,7 +12,7 @@
                     <div class="catalogo_superior">
                         <div class="servicios">
                             <h3>TINTURADO NORMAL</h3>
-                            <img src="{% static 'imagenes/imagen_prueba.jpg' %}"  alt="My image">
+                            <img src="{% static 'imagenes/normal.jpg' %}"  alt="My image">
                                 <div class="infor_servicio">
                                     <li>Duración: 60 Minutos</li>
                                     <li>Precio: $20.000</li>
@@ -22,8 +22,8 @@
                                 </div>
                         </div>
                         <div class="servicios">
-                            <h3>TINTURADO CON DECOLORACIÓN</h3>
-                            <img src="{% static 'imagenes/imagen_prueba.jpg' %}" alt="My image">
+                            <h3>TINTURADO FANTASÍA</h3>
+                            <img src="{% static 'imagenes/decoloracion.jpg' %}" alt="My image">
                             <div class="infor_servicio">
                                 <li>Duración: 180 Minutos </li>
                                 <li>Precio: $45.000 </li>
