--- a/peluqueria/templates/index_prueba.html
+++ b/peluqueria/templates/index_prueba.html
@@ -72,7 +72,7 @@
                                             <h3>Perfil de Peluquero</h3>
                                             <img src="{% static 'imagenes/Corte.jpg' %}"  alt="My image">
                                             <div class="contenido-servicio">
-                                                <a href="/Cortes" class="boton boton-gris">Ver más</a>
+                                                <a href="/ver_reservas_hoy" class="boton boton-gris">Ver reservas de hoy</a>
                                             </div>
                                         </div>
                                     </div>
