--- a/peluqueria/templates/layout.html
+++ b/peluqueria/templates/layout.html
@@ -65,7 +65,7 @@
                         {% if perms.users.view_peluquero %}
                             <nav class="navegador_informacion">
                                 <a href="/quienes_somos">Quiénes somos</a>
-                                <a href="/">Próximas reservas</a>
+                                <a href="/fechas_peluquero">Ver calendario</a>
                                 <a href="/contacto">Contacto</a>
                                 <a href="/Profesionales">Profesionales</a>
                             </nav> 
