--- a/peluqueria/templates/layout.html
+++ b/peluqueria/templates/layout.html
@@ -66,7 +66,7 @@
                             <nav class="navegador_informacion">
                                 <a href="/quienes_somos">Quiénes somos</a>
                                 <a href="/fechas_peluquero">Ver calendario</a>
-                                <a href="/contacto">Contacto</a>
+                                <a href="/Contacto">Contacto</a>
                                 <a href="/Profesionales">Profesionales</a>
                             </nav> 
                         {% else %} 
