--- a/peluqueria/templates/ver_reservas.html
+++ b/peluqueria/templates/ver_reservas.html
@@ -10,7 +10,7 @@
             <main>
 
                 <h2 class="encabezado-servicios">Información peluquería</h2>
-                    <div class="catalogo">
+                     <section class="Barra_contenedor seccion">
                         <div class="catalogo_superior">
                             <div class="informacion_contacto">
 
@@ -76,8 +76,8 @@
     
                                 </div>
                             </div>
-                    </div>
-
+                   
+                    </section>      
         
             </main>
             
